--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "./base/utilities";
 
 @import "./layout/navigation.scss";
+@import "./layout/footer.scss";
 
 @import "./components/buttons.scss";
 
