--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
                 <a href="" class="menu-btn"></a>
               </li>
               <li>
-                <a href=""><h2 class="heading-2">Timetable</h2></a>
+                <a href="#lineup--mob"><h2 class="heading-2">Lineup</h2></a>
               </li>
               <li>
                 <a href="https://ra.co/events/1645227" target="_blank"
@@ -181,7 +181,7 @@
       </div>
     </div>
 
-    <section class="music--mob wrapper-main">
+    <section class="music--mob wrapper-main" id="lineup--mob">
       <div class="music--mob__controls">
         <!-- <div class="arrow-left"></div> -->
         <h1 class="heading-1">Music</h1>
@@ -263,6 +263,16 @@
         </ul>
       </div>
       <img src="/src/imgs/music-pic.png" alt="hooligan art community" class="music--mob__photo" />
+      <div class="music--mob__desc">
+        <h3 class="heading-3">About</h3>
+        <p class="paragraph">
+          One of the main locations of the festival will be a huge hall with a panoramic canvas and
+          projectors with the combination with the music of Ukrainian artists, will complement their
+          performances with modern digital art. With the help of digital projections, artists create
+          a new interaction with the viewer.
+        </p>
+      </div>
     </section>
   </main>
 </body>
+<%- include('layout/end.ejs') %>
