--- a/views/layout/end.ejs
+++ b/views/layout/end.ejs
@@ -1,4 +1,14 @@
-    <footer></footer>
+    <footer class="footer--mob">
+        <!-- <div class="footer--mob--left">
+            <div class="wrapper"><img src="" alt=""></div>
+            <ul>
+                <li><a href="" class="heading-5">timetable</a></li>
+                <li><a href="#lineup--mob" class="heading-5">lineup</a></li>
+                <li><a href="" class="heading-5">mup</a></li>
+            </ul>
+        </div>
+        <div class="footer--mob--right"></div> -->
+    </footer>
     <!-- <script src="/socket.io/socket.io.js"></script> -->
     <% for (let script of scripts) { %>
         <script type="module" src="<%= script %>"></script>  
