--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="День сучасної української культури і мистецтва." />
-    <title>Офіційний сайт події "Мистецтво - зброя!"</title>
+    <title>Art -- Weapon! official website"</title>
     <link rel="icon" type="image/png" href="/src/favicon.ico" />
     <link rel="stylesheet" href="/css/main.css" />
   </head>
-</html>
+
