--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,7 +30,8 @@
   box-sizing: inherit; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  scroll-behavior: smooth; }
 
 body {
   color: var(--color-white);
@@ -87,14 +88,19 @@ ul {
   text-transform: uppercase; }
   @media (max-width: 56.25em) {
     .heading-3 {
-      font: 400 2.4rem/3rem "Roboto-Regular", sans-serif, open-sans;
+      font: 400 2rem/3rem "Roboto-Regular", sans-serif, open-sans;
       letter-spacing: normal;
       text-transform: uppercase; } }
 
 .paragraph {
-  font: 500 1.6rem/1.6rem "Roboto-Regular", sans-serif, open-sans;
+  font: 400 2rem/2.4rem "Roboto-Regular", sans-serif, open-sans;
   letter-spacing: normal;
   text-transform: none; }
+  @media (max-width: 56.25em) {
+    .paragraph {
+      font: 400 2rem/2.6rem "Roboto-Regular", sans-serif, open-sans;
+      letter-spacing: normal;
+      text-transform: none; } }
 
 .wrapper-main {
   width: 100%;
@@ -185,6 +191,12 @@ ul {
             .hero--2 ul li a h2 {
               padding: 0.7rem 1rem; } }
 
+footer.footer--mob {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-auto-rows: auto;
+  background-color: black; }
+
 .menu-btn {
   pointer-events: none;
   display: block;
@@ -256,11 +268,13 @@ ul {
       .hero--3 {
         grid-column: 1 / 3;
         grid-row: 3 / 4; } }
-    @media (max-width: 56.25em) {
-      .hero--3 img {
-        width: 30%;
-        object-fit: contain;
-        margin-bottom: -4rem; } }
+    .hero--3 img {
+      width: 60%; }
+      @media (max-width: 56.25em) {
+        .hero--3 img {
+          width: 30%;
+          object-fit: contain;
+          margin-bottom: -4rem; } }
   .hero--4 {
     pointer-events: none;
     grid-column: 1 / 2;
@@ -443,15 +457,23 @@ ul {
   .music--mob__content {
     grid-column: 1 / 3;
     display: flex;
+    justify-content: space-between;
     margin-top: 4rem; }
     .music--mob__content ul:last-of-type {
       display: flex;
       flex-direction: column;
       align-items: flex-end; }
     .music--mob__content h3 {
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      white-space: nowrap; }
   .music--mob__photo {
     grid-column: 1 / 3;
     margin-top: 4.4rem;
     width: 100%;
     height: auto; }
+  .music--mob__desc {
+    grid-column: 1 / 3;
+    margin-top: 5rem;
+    padding-bottom: 10rem; }
+    .music--mob__desc p {
+      margin-top: 4rem; }
