--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -64,6 +64,7 @@
       grid-row: 3 / 4;
     }
     img {
+      width: 60%;
       @include respond(phone) {
         width: 30%;
         object-fit: contain;
@@ -297,6 +298,7 @@
     &__content {
       grid-column: 1 / 3;
       display: flex;
+      justify-content: space-between;
       margin-top: 4rem;
       ul:last-of-type {
         display: flex;
@@ -305,6 +307,7 @@
       }
       h3 {
         text-transform: uppercase;
+        white-space: nowrap;
       }
     }
     &__photo {
@@ -312,6 +315,14 @@
       margin-top: 4.4rem;
       width: 100%;
       height: auto;
+    }
+    &__desc {
+      grid-column: 1 / 3;
+      margin-top: 5rem;
+      padding-bottom: 10rem;
+      p {
+        margin-top: 4rem;
+      }
     }
   }
 }
