--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
                 <a href="" class="lineup__item"><h3 class="heading-3">Sensitive Content</h3></a>
               </li>
               <li>
-                <a href="" class="lineup__item"><h3 class="heading-3">Slas Koroliov</h3></a>
+                <a href="" class="lineup__item"><h3 class="heading-3">Stas Koroliov</h3></a>
               </li>
               <li>
                 <a href="" class="lineup__item"><h3 class="heading-3">RUSIIICK</h3> </a>
@@ -201,7 +201,7 @@
           <li><h3 class="heading-3">TONKA</h3></li>
           <li><h3 class="heading-3">KURS VALÜT</h3></li>
           <li><h3 class="heading-3">SENSITIVE CONTENT</h3></li>
-          <li><h3 class="heading-3">SLAS KOROLIOV</h3></li>
+          <li><h3 class="heading-3">STAS KOROLIOV</h3></li>
           <li><h3 class="heading-3">RUSIIICK</h3></li>
           <li><h3 class="heading-3">THE LAZY JEZUS</h3></li>
           <li><h3 class="heading-3">KOLOAH</h3></li>
