--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,15 +27,15 @@
           </div>
           <div class="hero--2">
             <ul>
-              <li>
+              <!-- <li>
                 <a href=""><h2 class="heading-2">Timetable</h2></a>
               </li>
               <li>
                 <a href=""><h2 class="heading-2">Map</h2></a>
-              </li>
-              <li>
+              </li> -->
+              <!-- <li>
                 <a href=""><h2 class="heading-2">Donate</h2></a>
-              </li>
+              </li> -->
             </ul>
           </div>
           <!-- berliner-baer -->
@@ -49,7 +49,7 @@
                 <a href="" class="lineup__item"
                   ><h3 class="heading-3">
                     warнякання <br />
-                    <span class="paragraph">(Антон Слєпаков <br />/ Андрій Соколов)</span>
+                    <span class="paragraph">(Anton Slepakov <br />/ Andriy Sokolov)</span>
                   </h3></a
                 >
               </li>
