--- a/sass/abstracts/typography-styles-mixins.scss
+++ b/sass/abstracts/typography-styles-mixins.scss
@@ -18,21 +18,28 @@ $DrukCyr-Heavy: "DrukCyr-Heavy";
 @mixin heading-1--mob {
   @include font($DrukCyr-Heavy, 400, 6rem, 8rem, none, normal);
 }
+@mixin heading-1--med-desk {
+  @include font($DrukCyr-Heavy, 400, 6rem, 6.4rem, none, normal);
+}
 
 @mixin heading-2 {
   @include font($DrukCyr-Heavy, 900, 5.4rem, 5.4rem, none, normal);
 }
-
 @mixin heading-2--mob {
   @include font($DrukCyr-Heavy, 500, 3.6rem, 2.8rem, none, normal);
+}
+@mixin heading-2--med-desk {
+  @include font($DrukCyr-Heavy, 500, 4.8rem, 4.4rem, none, normal);
 }
 
 @mixin heading-3 {
   @include font($Roboto-Regular, 400, 2.4rem, 2.4rem, uppercase, normal);
 }
-
 @mixin heading-3--mob {
   @include font($Roboto-Regular, 400, 2rem, 3rem, uppercase, normal);
+}
+@mixin heading-3--med-desk {
+  @include font($Roboto-Regular, 400, 1.8rem, 2.4rem, uppercase, normal);
 }
 
 // @mixin heading-4 {
