--- a/views/pages/music.ejs
+++ b/views/pages/music.ejs
@@ -1,16 +1,16 @@
-<%- include('layout/head.ejs') %>
+<%- include('../layout/head.ejs') %>
 
 <body class="">
   <main class="">
-    <div class="main-page-bg">
-      <div class="main-page-bg__overlay">
-        <section class="hero wrapper-main">
+    <div class="">
+      <div class="">
+        <section class="music wrapper-main">
           <!-- logo -->
-          <div class="hero--1">
+          <div class="music--1">
             <img src="/src/imgs/logos/hero-logo-anim.gif" alt="art weapon logo" class="" />
           </div>
           <!-- navigation -->
-          <div class="hero--2--mob">
+          <div class="music--2--mob">
             <ul>
               <li>
                 <a href="" class="menu-btn"></a>
@@ -25,7 +25,7 @@
               </li>
             </ul>
           </div>
-          <div class="hero--2">
+          <div class="music--2">
             <ul>
               <!-- <li>
                 <a href=""><h2 class="heading-2">Timetable</h2></a>
@@ -39,11 +39,11 @@
             </ul>
           </div>
           <!-- berliner-baer -->
-          <div class="hero--3">
+          <div class="music--3">
             <img src="/src/imgs/Berliner-Baer.png" alt="" class="" />
           </div>
           <!-- lineup -->
-          <div class="hero--4">
+          <div class="music--4">
             <ul>
               <li>
                 <a href="" class="lineup__item"
@@ -117,7 +117,7 @@
             </ul>
           </div>
           <!-- areas -->
-          <div class="hero--5">
+          <div class="music--5">
             <ul>
               <li>
                 <a href="https://ra.co/events/1645227" target="_blank"
@@ -130,17 +130,13 @@
             </ul>
             <ul>
               <li>
-                <a href="/"><h1 class="heading-1">Music</h1></a>
+                <a href="/music"><h1 class="heading-1 areas active">Music</h1></a>
               </li>
               <li>
-                <a href="/theatre">
-                  <h1 class="heading-1">Theatre</h1>
-                </a>
+                <h1 class="heading-1">Theatre</h1>
               </li>
               <li>
-                <a href="/exhibition">
-                  <h1 class="heading-1">Exhibition</h1>
-                </a>
+                <h1 class="heading-1">Exhibition</h1>
               </li>
               <li>
                 <h1 class="heading-1">Art market</h1>
@@ -154,7 +150,7 @@
             </ul>
           </div>
           <!-- footer -->
-          <div class="hero--6 footer">
+          <div class="music--6 footer">
             <div class="footer__address">
               <h1 class="heading-1">Berlin</h1>
               <a
@@ -168,7 +164,7 @@
             </div>
           </div>
           <!-- partners -->
-          <div class="hero--7 partners">
+          <div class="music--7 partners">
             <div class="footer__partners">
               <div class="vitsche-small-logo footer-logo"></div>
               <div class="polygon-small-logo footer-logo"></div>
@@ -176,7 +172,7 @@
             </div>
           </div>
           <!-- date -->
-          <div class="hero--8 date">
+          <div class="music--8 date">
             <h1 class="heading-1 text">25 February</h1>
             <h1 class="heading-1 text--mob">25 Feb</h1>
             <h1 class="heading-3 text--mob">DOOR 12:00</h1>
@@ -279,4 +275,4 @@
     </section>
   </main>
 </body>
-<%- include('layout/end.ejs') %>
+<%- include('../layout/end.ejs') %>
