--- a/public/css/main.css
+++ b/public/css/main.css
@@ -291,7 +291,6 @@ footer.footer--mob {
           object-fit: contain;
           margin-bottom: -4rem; } }
   .hero--4 {
-    pointer-events: none;
     grid-column: 1 / 2;
     grid-row: 3 / 4;
     display: flex;
@@ -337,7 +336,6 @@ footer.footer--mob {
           color: white;
           border-color: white; }
     .hero--5 > ul:last-of-type {
-      pointer-events: none;
       margin-top: 6rem; }
       .hero--5 > ul:last-of-type > li {
         display: flex; }
@@ -491,4 +489,486 @@ footer.footer--mob {
     margin-top: 5rem;
     padding-bottom: 10rem; }
     .music--mob__desc p {
+      margin-top: 4rem; }
+
+.artist-page-bg {
+  background-image: url("../src/imgs/artist-bg.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
+
+.artist {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 2rem;
+  column-gap: 4.8rem;
+  grid-template-rows: 8rem auto auto 8rem;
+  width: 100%; }
+  @media (max-width: 56.25em) {
+    .artist {
+      column-gap: 2rem;
+      grid-template-columns: repeat(2, auto);
+      grid-template-rows: auto; } }
+  .artist--1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start; }
+    @media (max-width: 56.25em) {
+      .artist--1 {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3; } }
+    .artist--1 img {
+      width: 100%;
+      object-fit: contain; }
+  .artist--3 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    @media (max-width: 56.25em) {
+      .artist--3 {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4; } }
+    .artist--3 img {
+      width: 60%; }
+      @media (max-width: 56.25em) {
+        .artist--3 img {
+          width: 30%;
+          object-fit: contain;
+          margin-bottom: -4rem; } }
+  .artist--4 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 3rem; }
+    @media (max-width: 56.25em) {
+      .artist--4 {
+        display: none; } }
+    .artist--4 > ul {
+      margin-right: 2rem; }
+      .artist--4 > ul:last-of-type {
+        margin-right: 0; }
+      .artist--4 > ul > li {
+        margin-top: 0.4rem;
+        display: flex; }
+        .artist--4 > ul > li > *:hover {
+          background-image: linear-gradient(to right, #2d20d3, #9b7562);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent; }
+        .artist--4 > ul > li a {
+          display: flex;
+          flex-direction: row; }
+        .artist--4 > ul > li h3 {
+          white-space: nowrap; }
+        .artist--4 > ul > li p {
+          align-self: flex-end;
+          margin-left: 1rem; }
+  .artist--5 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2; }
+    .artist--5 > ul {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between; }
+  .artist--6 {
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1.6rem; }
+    @media (max-width: 56.25em) {
+      .artist--6 {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+        display: none; } }
+  .artist--7 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 1.6rem; }
+    @media (max-width: 56.25em) {
+      .artist--7 {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+        display: none; } }
+  .artist--8 {
+    grid-column: 3 / 4;
+    grid-row: 4 / 5; }
+    @media (max-width: 56.25em) {
+      .artist--8 {
+        grid-column: 2 / 3;
+        grid-row: 4 / 5; } }
+    .artist--8 .text {
+      display: flex; }
+      @media (max-width: 56.25em) {
+        .artist--8 .text {
+          display: none; } }
+      .artist--8 .text--mob {
+        display: none; }
+        @media (max-width: 56.25em) {
+          .artist--8 .text--mob {
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            white-space: nowrap; } }
+    .artist--8 h1 {
+      text-transform: uppercase; }
+  .artist--9 {
+    grid-column: 2 / 4;
+    grid-row: 2 / 3; }
+  .artist--10 {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4; }
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%; }
+  .footer__address {
+    display: flex;
+    flex-direction: row;
+    padding-left: 2.8rem; }
+    @media (max-width: 56.25em) {
+      .footer__address {
+        flex-direction: column;
+        padding-left: 0; } }
+    .footer__address h1 {
+      text-transform: uppercase;
+      margin-bottom: -1.2rem; }
+    .footer__address a {
+      display: block;
+      align-self: flex-end;
+      margin-left: 2rem; }
+      @media (max-width: 56.25em) {
+        .footer__address a {
+          margin-left: 0; } }
+      .footer__address a:hover {
+        color: white; }
+  .footer__partners {
+    display: flex;
+    flex-direction: row; }
+    .footer__partners > div {
+      margin-right: 4.5rem; }
+      .footer__partners > div:last-of-type {
+        margin-right: 0; }
+  .footer__date {
+    display: flex; }
+    @media (max-width: 56.25em) {
+      .footer__date {
+        display: none; } }
+    .footer__date h1 {
+      text-transform: uppercase;
+      align-self: flex-end; }
+
+.artist--2--mob {
+  display: none; }
+  @media (max-width: 56.25em) {
+    .artist--2--mob {
+      display: grid;
+      grid-template-columns: repeat(2, auto);
+      grid-auto-rows: max-content;
+      margin-top: 6rem; } }
+  .artist--2--mob__controls {
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%; }
+    .artist--2--mob__controls .arrow-left {
+      background-image: url("../src/imgs/icons/arrow-left.svg");
+      background-size: 5rem;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 5rem;
+      height: 5rem; }
+    .artist--2--mob__controls .arrow-right {
+      background-image: url("../src/imgs/icons/arrow-right.svg");
+      background-size: 5rem;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 5rem;
+      height: 5rem; }
+    .artist--2--mob__controls h1 {
+      text-transform: uppercase; }
+  .artist--2--mob__content {
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4rem; }
+    .artist--2--mob__content ul:last-of-type {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end; }
+    .artist--2--mob__content h3 {
+      text-transform: uppercase;
+      white-space: nowrap; }
+  .artist--2--mob__photo {
+    grid-column: 1 / 3;
+    margin-top: 4.4rem;
+    width: 100%;
+    height: auto; }
+  .artist--2--mob__desc {
+    grid-column: 1 / 3;
+    margin-top: 5rem;
+    padding-bottom: 10rem; }
+    .artist--2--mob__desc p {
+      margin-top: 4rem; }
+
+.music {
+  display: grid;
+  position: relative;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 2rem;
+  column-gap: 4.8rem;
+  grid-template-rows: 8rem auto auto 8rem;
+  width: 100%; }
+  @media (max-width: 56.25em) {
+    .music {
+      column-gap: 2rem;
+      grid-template-columns: repeat(2, auto);
+      grid-template-rows: auto; } }
+  .music--1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start; }
+    @media (max-width: 56.25em) {
+      .music--1 {
+        grid-column: 1 / 3;
+        grid-row: 2 / 3; } }
+    .music--1 img {
+      width: 100%;
+      object-fit: contain; }
+  .music--3 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    @media (max-width: 56.25em) {
+      .music--3 {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4; } }
+    .music--3 img {
+      width: 60%; }
+      @media (max-width: 56.25em) {
+        .music--3 img {
+          width: 30%;
+          object-fit: contain;
+          margin-bottom: -4rem; } }
+  .music--4 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    display: flex;
+    justify-content: flex-start;
+    padding-left: 3rem; }
+    @media (max-width: 56.25em) {
+      .music--4 {
+        display: none; } }
+    .music--4 > ul {
+      margin-right: 2rem; }
+      .music--4 > ul:last-of-type {
+        margin-right: 0; }
+      .music--4 > ul > li {
+        margin-top: 0.4rem;
+        display: flex; }
+        .music--4 > ul > li > *:hover {
+          background-image: linear-gradient(to right, #2d20d3, #9b7562);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent; }
+        .music--4 > ul > li a {
+          display: flex;
+          flex-direction: row; }
+        .music--4 > ul > li h3 {
+          white-space: nowrap; }
+        .music--4 > ul > li p {
+          align-self: flex-end;
+          margin-left: 1rem; }
+  .music--5 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 4;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; }
+    @media (max-width: 56.25em) {
+      .music--5 {
+        display: none; } }
+    .music--5 > ul:first-of-type {
+      display: flex;
+      justify-content: space-between;
+      width: 100%; }
+      .music--5 > ul:first-of-type h2 {
+        text-transform: uppercase;
+        cursor: pointer; }
+        .music--5 > ul:first-of-type h2:hover {
+          color: white;
+          border-color: white; }
+    .music--5 > ul:last-of-type {
+      margin-top: 6rem; }
+      .music--5 > ul:last-of-type > li {
+        display: flex; }
+        .music--5 > ul:last-of-type > li a {
+          display: flex;
+          flex-direction: row; }
+        .music--5 > ul:last-of-type > li h1 {
+          text-transform: uppercase;
+          cursor: pointer; }
+          .music--5 > ul:last-of-type > li h1:hover {
+            background-image: linear-gradient(to right, #2d20d3, #9b7562);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent; }
+  .music--6 {
+    grid-column: 1 / 3;
+    grid-row: 4 / 5;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1.6rem; }
+    @media (max-width: 56.25em) {
+      .music--6 {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+        display: none; } }
+  .music--7 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 1.6rem; }
+    @media (max-width: 56.25em) {
+      .music--7 {
+        grid-column: 1 / 3;
+        grid-row: 5 / 6;
+        display: none; } }
+  .music--8 {
+    grid-column: 3 / 4;
+    grid-row: 4 / 5; }
+    @media (max-width: 56.25em) {
+      .music--8 {
+        grid-column: 2 / 3;
+        grid-row: 4 / 5; } }
+    .music--8 .text {
+      display: flex; }
+      @media (max-width: 56.25em) {
+        .music--8 .text {
+          display: none; } }
+      .music--8 .text--mob {
+        display: none; }
+        @media (max-width: 56.25em) {
+          .music--8 .text--mob {
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            white-space: nowrap; } }
+    .music--8 h1 {
+      text-transform: uppercase; }
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 100%; }
+  .footer__address {
+    display: flex;
+    flex-direction: row;
+    padding-left: 2.8rem; }
+    @media (max-width: 56.25em) {
+      .footer__address {
+        flex-direction: column;
+        padding-left: 0; } }
+    .footer__address h1 {
+      text-transform: uppercase;
+      margin-bottom: -1.2rem; }
+    .footer__address a {
+      display: block;
+      align-self: flex-end;
+      margin-left: 2rem; }
+      @media (max-width: 56.25em) {
+        .footer__address a {
+          margin-left: 0; } }
+      .footer__address a:hover {
+        color: white; }
+  .footer__partners {
+    display: flex;
+    flex-direction: row; }
+    .footer__partners > div {
+      margin-right: 4.5rem; }
+      .footer__partners > div:last-of-type {
+        margin-right: 0; }
+  .footer__date {
+    display: flex; }
+    @media (max-width: 56.25em) {
+      .footer__date {
+        display: none; } }
+    .footer__date h1 {
+      text-transform: uppercase;
+      align-self: flex-end; }
+
+.music--2--mob {
+  display: none; }
+  @media (max-width: 56.25em) {
+    .music--2--mob {
+      display: grid;
+      grid-template-columns: repeat(2, auto);
+      grid-auto-rows: max-content;
+      margin-top: 6rem; } }
+  .music--2--mob__controls {
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%; }
+    .music--2--mob__controls .arrow-left {
+      background-image: url("../src/imgs/icons/arrow-left.svg");
+      background-size: 5rem;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 5rem;
+      height: 5rem; }
+    .music--2--mob__controls .arrow-right {
+      background-image: url("../src/imgs/icons/arrow-right.svg");
+      background-size: 5rem;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 5rem;
+      height: 5rem; }
+    .music--2--mob__controls h1 {
+      text-transform: uppercase; }
+  .music--2--mob__content {
+    grid-column: 1 / 3;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4rem; }
+    .music--2--mob__content ul:last-of-type {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end; }
+    .music--2--mob__content h3 {
+      text-transform: uppercase;
+      white-space: nowrap; }
+  .music--2--mob__photo {
+    grid-column: 1 / 3;
+    margin-top: 4.4rem;
+    width: 100%;
+    height: auto; }
+  .music--2--mob__desc {
+    grid-column: 1 / 3;
+    margin-top: 5rem;
+    padding-bottom: 10rem; }
+    .music--2--mob__desc p {
       margin-top: 4rem; }
