--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,5 @@
 @import "./components/buttons.scss";
 
 @import "./pages/index.scss";
+@import "./pages/artist.scss";
+@import "./pages/music.scss";
