--- a/sass/pages/artist.scss
+++ b/sass/pages/artist.scss
@@ -1,26 +1,25 @@
 @import "../base/colors.scss", "../abstracts/mixins.scss";
 
-//HERO SECTION ===========================
-.main-page-bg {
-  background-image: url("../src/imgs/main-bg.png");
+.artist-page-bg {
+  background-image: url("../src/imgs/artist-bg.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  &__overlay {
-    background-image: url("../src/imgs/main-bg-overlay.png");
-    background-size: auto 90%;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    @include respond(phone) {
-      background-size: 90% auto;
-      background-position: bottom 20% center;
-    }
-  }
+  // &__overlay {
+  //   background-image: url("../src/imgs/main-bg-overlay.png");
+  //   background-size: auto 90%;
+  //   background-position: center;
+  //   background-repeat: no-repeat;
+  //   width: 100%;
+  //   height: 100%;
+  //   @include respond(phone) {
+  //     background-size: 90% auto;
+  //     background-position: bottom 20% center;
+  //   }
+  // }
 }
 
-.hero {
+.artist {
   display: grid;
   position: relative;
   grid-template-columns: repeat(3, 1fr);
@@ -92,7 +91,9 @@
         margin-top: 0.4rem;
         display: flex;
         > *:hover {
-          color: $color-1;
+          background-image: linear-gradient(to right, #2d20d3, #9b7562);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
         }
         a {
           display: flex;
@@ -108,47 +109,14 @@
       }
     }
   }
-  // Areas
+  // Actions
   &--5 {
     grid-column: 3 / 4;
-    grid-row: 1 / 4;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    @include respond(phone) {
-      display: none;
-    }
-    // Action buttons
-    > ul:first-of-type {
+    grid-row: 1 / 2;
+    > ul {
       display: flex;
+      flex-direction: row;
       justify-content: space-between;
-      width: 100%;
-      h2 {
-        text-transform: uppercase;
-        cursor: pointer;
-        &:hover {
-          color: $color-1;
-          border-color: $color-1;
-        }
-      }
-    }
-    > ul:last-of-type {
-      // pointer-events: none;
-      margin-top: 6rem;
-      > li {
-        display: flex;
-        a {
-          display: flex;
-          flex-direction: row;
-        }
-        h1 {
-          text-transform: uppercase;
-          cursor: pointer;
-          &:hover {
-            color: $color-1;
-          }
-        }
-      }
     }
   }
   &--6 {
@@ -206,6 +174,15 @@
       text-transform: uppercase;
     }
   }
+  // Content
+  &--9 {
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+  }
+  &--10 {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
 }
 
 .footer {
@@ -259,7 +236,7 @@
   }
 }
 
-.music {
+.artist--2 {
   &--mob {
     display: none;
     @include respond(phone) {
